src/main/java/antlr/test/fail/duplicate_var.go
package main

func main() {
    var tst = 12
}
func foo() {
    var tst = 12
    var a = 8
    var j = a
    var tst = a
}
